fix(StreetFighter): correçao de alguns erros

--- a/src/Modulo-05-C#/StreetFight/StreetFighter.Repositorio/StreetFighter.Repositorio.csproj
+++ b/src/Modulo-05-C#/StreetFight/StreetFighter.Repositorio/StreetFighter.Repositorio.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PersonagemRepositorio.cs" />
+    <Compile Include="PersonagemRepositorioBDD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsuarioRepositorioBDD.cs" />
     <Compile Include="UsuarioRepositorio.cs" />
   </ItemGroup>
   <ItemGroup>
