fix(streetfighter): user id é separado

--- a/src/Modulo-05-C#/StreetFight/StreetFighter/Web.config
+++ b/src/Modulo-05-C#/StreetFight/StreetFighter/Web.config
@@ -42,7 +42,7 @@
     </modules>
   </system.webServer>
 <connectionStrings>
-  <add name="StreetFighterConection" connectionString=" Server=NB-002688\SQLEXPRESS; DataBase=StreetFighter; UserId=sa; Password=12345;"
+  <add name="StreetFighterConection" connectionString=" Server=NB-002688\SQLEXPRESS; DataBase=StreetFighter; User Id=sa; Password=sa12345;"
   providerName="System.Data.SqlClient"/>
 </connectionStrings>
 <system.codedom>
