--- a/src/Modulo-05-C#/StreetFight/StreetFighter.Repositorio/StreetFighter.Repositorio.csproj
+++ b/src/Modulo-05-C#/StreetFight/StreetFighter.Repositorio/StreetFighter.Repositorio.csproj
@@ -44,6 +44,7 @@
     <Compile Include="PersonagemRepositorio.cs" />
     <Compile Include="PersonagemRepositorioBDD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorio.cs" />
     <Compile Include="UsuarioRepositorioBDD.cs" />
     <Compile Include="UsuarioRepositorio.cs" />
   </ItemGroup>
