--- a/src/Modulo-05-C#/StreetFight/StreetFighter.RepositorioFW/StreetFighter.RepositorioFW.csproj
+++ b/src/Modulo-05-C#/StreetFight/StreetFighter.RepositorioFW/StreetFighter.RepositorioFW.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1551C301-C129-4C2A-8718-37FD8903DBC9}</ProjectGuid>
+    <ProjectGuid>{02D6C387-2A9D-4E70-8014-FECD87595826}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StreetFighter.Dominio</RootNamespace>
-    <AssemblyName>StreetFighter.Dominio</AssemblyName>
+    <RootNamespace>StreetFighter.RepositorioFW</RootNamespace>
+    <AssemblyName>StreetFighter.RepositorioFW</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,7 +30,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,12 +49,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ILoginRepositorio.cs" />
-    <Compile Include="IPersonagemRepositorio.cs" />
-    <Compile Include="Login.cs" />
-    <Compile Include="Personagem.cs" />
+    <Compile Include="DatabaseContext.cs" />
+    <Compile Include="LoginRepositorioFW.cs" />
+    <Compile Include="PersonagemRepositorioFW.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegraNegocioException.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\StreetFighter.Dominio\StreetFighter.Dominio.csproj">
+      <Project>{1551C301-C129-4C2A-8718-37FD8903DBC9}</Project>
+      <Name>StreetFighter.Dominio</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
