--- a/src/Modulo-05-C#/StreetFight/Infraestrutura/StreetFigther.Infraestrutura.csproj
+++ b/src/Modulo-05-C#/StreetFight/Infraestrutura/StreetFigther.Infraestrutura.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3E5CBA44-6C14-4C2B-B273-B8604D03237A}</ProjectGuid>
+    <ProjectGuid>{3DDCA3AB-6CAD-4B48-BDBA-22863387C500}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StreetFighter.Aplicativo</RootNamespace>
-    <AssemblyName>StreetFighter.Aplicativo</AssemblyName>
+    <RootNamespace>Infraestrutura</RootNamespace>
+    <AssemblyName>Infraestrutura</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,24 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AutenticacaoAplicativo.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Criptografia.cs" />
-    <Compile Include="PersonagemAplivativo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\StreetFighter.Dominio\StreetFighter.Dominio.csproj">
-      <Project>{1551c301-c129-4c2a-8718-37fd8903dbc9}</Project>
-      <Name>StreetFighter.Dominio</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\StreetFighter.RepositorioFW\StreetFighter.RepositorioFW.csproj">
-      <Project>{02d6c387-2a9d-4e70-8014-fecd87595826}</Project>
-      <Name>StreetFighter.RepositorioFW</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\StreetFighter.Repositorio\StreetFighter.Repositorio.csproj">
-      <Project>{92ba786c-c922-48bc-b681-d72c31f0cc09}</Project>
-      <Name>StreetFighter.Repositorio</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
