--- a/src/Modulo-05-C#/StreetFight/StreetFighter/Web.config
+++ b/src/Modulo-05-C#/StreetFight/StreetFighter/Web.config
@@ -44,25 +44,8 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
   </system.webServer>
-<<<<<<< HEAD
-<connectionStrings>
-  <add name="StreetFighterConection" connectionString=" Server=NB-002688\SQLEXPRESS; DataBase=StreetFighter; User Id=sa; Password=sa12345;"
-  providerName="System.Data.SqlClient"/>
-</connectionStrings>
-<system.codedom>
-<compilers>
-<compiler language="c#;cs;csharp" extension=".cs"
-type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701"/>
-<compiler language="vb;vbs;visualbasic;vbscript" extension=".vb"
-type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
-</compilers>
-</system.codedom>
-</configuration>
-=======
   <connectionStrings>
-    <add name="StreetFighterConection" connectionString=" Server=NB-002688\SQLEXPRESS; DataBase=StreetFighter; UserId=sa; Password=12345;" providerName="System.Data.SqlClient" />
+    <add name="StreetFighter" connectionString=" Server=NB-002688\SQLEXPRESS; DataBase= StreetFighter; User Id=sa; Password=sa12345;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.codedom>
     <compilers>
@@ -77,4 +60,3 @@ warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=
     </providers>
   </entityFramework>
 </configuration>
->>>>>>> master
