--- a/src/modulo-05-dot-net/aula-09/Loja/Loja.Repositorio/Loja.Repositorio.csproj
+++ b/src/modulo-05-dot-net/aula-09/Loja/Loja.Repositorio/Loja.Repositorio.csproj
@@ -54,7 +54,12 @@
     <Compile Include="Migrations\201611091620220_Initial.Designer.cs">
       <DependentUpon>201611091620220_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201611091852452_adicionarTabelaProduto.cs" />
+    <Compile Include="Migrations\201611091852452_adicionarTabelaProduto.Designer.cs">
+      <DependentUpon>201611091852452_adicionarTabelaProduto.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="ProdutoRepositorio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioRepositorio.cs" />
   </ItemGroup>
@@ -71,6 +76,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201611091620220_Initial.resx">
       <DependentUpon>201611091620220_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201611091852452_adicionarTabelaProduto.resx">
+      <DependentUpon>201611091852452_adicionarTabelaProduto.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
