--- a/src/modulo-05-dot-net/aula-09/Loja/Loja.Dominio/Loja.Dominio.csproj
+++ b/src/modulo-05-dot-net/aula-09/Loja/Loja.Dominio/Loja.Dominio.csproj
@@ -52,10 +52,12 @@
     <Compile Include="IProdutoRepositorio.cs" />
     <Compile Include="IServicoDeCriptografia.cs" />
     <Compile Include="Produto.cs" />
+    <Compile Include="ProdutoServico.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegraDeNegocioExeption.cs" />
+    <Compile Include="ProdutoException.cs" />
     <Compile Include="Usuario.cs" />
     <Compile Include="IUsuarioRepositorio.cs" />
+    <Compile Include="UsuarioException.cs" />
     <Compile Include="UsuarioServico.cs" />
   </ItemGroup>
   <ItemGroup>
