feat(aula8): coisas da aula, acabar em casa

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ bld/
 /src/modulo-09-java/aula1/target/
 /src/modulo-09-java/aula2/target/
 /src/modulo-09-java/Locadora/target/
+/src/modulo-09-java/aula8/target/
